# mock-test

./: .clang-format  .cproject  .gitignore  .project  README.md
.github/: codecov.yml
.github/workflows/: ci.yml
source/: LPC845_Project.c  add.c  add.h  add2.c  add2.h  add3.c  add3.h  add4.c  add4.h
test/: CMakeLists.txt  build.bat  build.sh  coverage.sh
test/mocks/: addMock.cc  addMock.h  batteryMock.cc  batteryMock.h  timerMock.cc  timerMock.h
test/targets/: test_add.cc  test_add2.cc  test_add3.cc  test_add4.cc  test_monitor.cc
